--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,12 @@
 		"server": "nodemon server.js",
 		"start": "concurrently \"nodemon server.js\" \"cd ../client && npm start\""
 	},
+	"type": "module",
+	"author": "Alejandro Francisco Marrero",
+	"license": "ISC",
 	"dependencies": {
 		"concurrently": "^7.6.0",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"mongoose": "^7.0.3"
 	}
