--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "server",
 	"version": "1.0.0",
-	"description": "CAB MERN Marketplace (Server/Backend)",
+	"description": "Flight Scraper Site",
 	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -12,9 +12,16 @@
 	"author": "Alejandro Francisco Marrero",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"cloudinary": "^1.35.0",
 		"concurrently": "^7.6.0",
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"mongoose": "^7.0.3"
+		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^7.0.3",
+		"multer": "^1.4.5-lts.1",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.1"
 	}
 }
