Added new database info

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DB=mongodb+srv://afm-merndb:xfnE7QzcQVHcmT5@cab-mern-marketplace.tccz1.mongodb.net/dbMarketplace?retryWrites=true&w=majority
+DB=mongodb+srv://afm-merndb:xfnE7QzcQVHcmT5@cab-mern-marketplace.tccz1.mongodb.net/dbFlightScraper?retryWrites=true&w=majority
 
 SECRET_OR_KEY=ale-ale-jandro
 
